force-app/main/default/objects/Subentregable__c/Subentregable__c.object-meta.xml
<CustomObject>
    <label>Entregable</label>
    <nameField>
        <label>Nombre de Entregables</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entregables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>