force-app/main/default/objects/Subentregable__c/fields/AprobadorFinal__c.field-meta.xml
<CustomField>
    <fullName>AprobadorFinal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Normalmente el cliente. Una vez aprobado pasa a Firmado.</inlineHelpText>
    <label>Aprobador Final</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EntregablesFirmar</relationshipName>
    <type>Lookup</type>
</CustomField>