force-app/main/default/objects/Subentregable__c/fields/Avance__c.field-meta.xml
<CustomField>
    <fullName>Avance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Avance</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>