force-app/main/default/objects/Subentregable__c/fields/Clasificador__c.field-meta.xml
<CustomField>
    <fullName>Clasificador__c</fullName>
    <label>Clasificador</label>
    <length>30</length>
    <type>Text</type>
</CustomField>