force-app/main/default/objects/Subentregable__c/fields/CodigoSubentregable__c.field-meta.xml
<CustomField>
    <fullName>CodigoSubentregable__c</fullName>
    <externalId>true</externalId>
    <label>Código Entregable</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>