force-app/main/default/objects/Subentregable__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Entregables</relationshipLabel>
    <relationshipName>Entregables</relationshipName>
    <type>Lookup</type>
</CustomField>