force-app/main/default/objects/Subentregable__c/fields/Dias_Restantes_de_Paso_a_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Dias_Restantes_de_Paso_a_Inicio__c</fullName>
    <formula>IF(ISPICKVAL(Estado__c,&apos;Pendiente&apos;) , Fecha_Limite_de_inicio__c - TODAY() , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes de Paso a Inicio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>