force-app/main/default/objects/Subentregable__c/fields/Dias_restantes_para_Fin__c.field-meta.xml
<CustomField>
    <fullName>Dias_restantes_para_Fin__c</fullName>
    <formula>IF(ISPICKVAL(Estado__c,&apos;Finalizado&apos;) , Fecha_limite_de_fin__c - TODAY() , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días restantes para Fin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>