force-app/main/default/objects/Subentregable__c/fields/DiasRestantesFirma__c.field-meta.xml
<CustomField>
    <fullName>DiasRestantesFirma__c</fullName>
    <formula>IF( ISPICKVAL(Estado__c,&apos;Firmado&apos;), 0, FechaLimiteFirma__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes para Firma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>