force-app/main/default/objects/Subentregable__c/fields/DiasRestantesLiberacion__c.field-meta.xml
<CustomField>
    <fullName>DiasRestantesLiberacion__c</fullName>
    <formula>IF( ISPICKVAL(Estado__c,&apos;Liberado&apos;) || ISPICKVAL(Estado__c,&apos;Firmado&apos;) , 0, FechaLimiteLiberacion__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes Liberación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>