force-app/main/default/objects/Subentregable__c/fields/DiasRestantesPasoRevision__c.field-meta.xml
<CustomField>
    <fullName>DiasRestantesPasoRevision__c</fullName>
    <formula>IF( ISPICKVAL(Estado__c,&apos;En Revisión Interna&apos;) || ISPICKVAL(Estado__c,&apos;Liberado&apos;) || ISPICKVAL(Estado__c,&apos;Firmado&apos;), 0, FechaLimitePasoRevision__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes Paso a Revisión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>