force-app/main/default/objects/Subentregable__c/fields/Entregable_Vencido__c.field-meta.xml
<CustomField>
    <fullName>Entregable_Vencido__c</fullName>
    <formula>IF ( 
				AND(
								NOT(
												ISPICKVAL(Estado__c, &apos;Liberado&apos;)
								),
								NOT(
												ISPICKVAL(Estado__c, &apos;Firmado&apos;)
								),
								FechaLimiteLiberacion__c &lt; TODAY() 
				),
				true,
				false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entregable Vencido</label>
    <type>Checkbox</type>
</CustomField>