force-app/main/default/objects/Subentregable__c/fields/Fecha_limite_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_de_fin__c</fullName>
    <label>Fecha Fin Plan</label>
    <type>Date</type>
</CustomField>