force-app/main/default/objects/Subentregable__c/fields/Fecha_Limite_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite_de_inicio__c</fullName>
    <description>Fecha en la cual se debe iniciar la elaboración de los soportes de cada entregable, este campo servirá para establecer una fecha en la cual se pueda asignar cada entregable a su responsable</description>
    <label>Fecha Inicio Plan</label>
    <type>Date</type>
</CustomField>