force-app/main/default/objects/Subentregable__c/fields/Fecha_Primer_Envio_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Primer_Envio_Firma__c</fullName>
    <label>Fecha Primer Envío Firma</label>
    <type>Date</type>
</CustomField>