force-app/main/default/objects/Subentregable__c/fields/Fecha_Real_de_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Real_de_Firma__c</fullName>
    <label>Fecha Real de Firma</label>
    <type>DateTime</type>
</CustomField>