force-app/main/default/objects/Subentregable__c/fields/Fecha_Real_de_Paso_a_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Real_de_Paso_a_Inicio__c</fullName>
    <label>Fecha Inicio Real</label>
    <type>DateTime</type>
</CustomField>