force-app/main/default/objects/Subentregable__c/fields/Flujo_Old__c.field-meta.xml
<CustomField>
    <fullName>Flujo_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que señalará a los entregables que se encuentrán implicados en el flujo  antiguo. Sirve para su regularización.</description>
    <label>Flujo Old</label>
    <type>Checkbox</type>
</CustomField>