force-app/main/default/objects/Subentregable__c/fields/IsApex__c.field-meta.xml
<CustomField>
    <fullName>IsApex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApex</label>
    <type>Checkbox</type>
</CustomField>