force-app/main/default/objects/Subentregable__c/fields/Numero_de_Envios_a_Firma__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Envios_a_Firma__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de Envíos a Firma</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>