force-app/main/default/objects/Subentregable__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Peso</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>