force-app/main/default/objects/Subentregable__c/fields/Proyecto_Entregable__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Entregable__c</fullName>
    <formula>Grupos_de_Entregables__r.Hito__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto Grupo de Entregables</label>
    <type>Text</type>
</CustomField>