force-app/main/default/objects/Subentregable__c/fields/ResponsableN1__c.field-meta.xml
<CustomField>
    <fullName>ResponsableN1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Nivel 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EntregablesResponsable</relationshipName>
    <type>Lookup</type>
</CustomField>