force-app/main/default/objects/Subentregable__c/fields/ResponsableN2__c.field-meta.xml
<CustomField>
    <fullName>ResponsableN2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Nivel 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entregables</relationshipName>
    <type>Lookup</type>
</CustomField>