force-app/main/default/objects/Subentregable__c/fields/Soy_ResponsableN2__c.field-meta.xml
<CustomField>
    <fullName>Soy_ResponsableN2__c</fullName>
    <formula>ResponsableN2__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Responsable Nivel 2</label>
    <type>Checkbox</type>
</CustomField>