force-app/main/default/objects/Subentregable__c/fields/Tarea_Documentalista__c.field-meta.xml
<CustomField>
    <fullName>Tarea_Documentalista__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca de forma automática cuando la tarea es enviada al documentalista tras la firma del entregable.</description>
    <label>Tarea Documentalista</label>
    <type>Checkbox</type>
</CustomField>