force-app/main/default/objects/Subentregable__c/fields/Tipo_entregable__c.field-meta.xml
<CustomField>
    <fullName>Tipo_entregable__c</fullName>
    <label>Tipo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>