force-app/main/default/objects/Subentregable__c/validationRules/Cambio_de_Estado.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_de_Estado</fullName>
    <active>false</active>
    <description>Solo el administrador puede modificar Estados distintos a &quot;Pendiente&quot;.</description>
    <errorConditionFormula>AND(ISCHANGED( Estado__c ),NOT(ISPICKVAL(Estado__c , &apos;Pendiente&apos;)),NOT(PRIORVALUE(Estado__c )==&apos;Pendiente&apos;),NOT(PRIORVALUE(Estado__c )==&apos;En desarrollo&apos;), NOT($Permission.AdministratorException))</errorConditionFormula>
    <errorMessage>Debe Enviar a Aprobación para modificar el Estado</errorMessage>
</ValidationRule>