force-app/main/default/objects/Subentregable__c/validationRules/Estado_cambia_a_Firmado.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_cambia_a_Firmado</fullName>
    <active>true</active>
    <description>El estado cambia a Firmado actualizar Fecha Real de Firma</description>
    <errorConditionFormula>AND(
ISCHANGED(Estado__c),
ISPICKVAL(Estado__c,&apos;Firmado&apos;),
ISBLANK(Fecha_Real_de_Firma__c)
)</errorConditionFormula>
    <errorDisplayField>Fecha_Real_de_Firma__c</errorDisplayField>
    <errorMessage>El estado ha cambiado a Firmado, actualiza la Fecha Real de Firma</errorMessage>
</ValidationRule>