force-app/main/default/objects/Subentregable__c/validationRules/Estado_cambia_a_Firmado_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_cambia_a_Firmado_2</fullName>
    <active>true</active>
    <description>El estado cambia a Firmado comprobar que la fecha real de liberación está informada</description>
    <errorConditionFormula>AND(
ISCHANGED(Estado__c),
ISPICKVAL(Estado__c,&apos;Firmado&apos;),
ISBLANK(Fecha_Real_de_Liberacion__c)
)</errorConditionFormula>
    <errorDisplayField>Fecha_Real_de_Liberacion__c</errorDisplayField>
    <errorMessage>Actualiza la Fecha Real de Liberación</errorMessage>
</ValidationRule>