force-app/main/default/objects/Subentregable__c/validationRules/Estado_cambia_a_Liberado.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_cambia_a_Liberado</fullName>
    <active>true</active>
    <description>Cuando el estado cambie a Liberado actualizar la fecha real de liberación</description>
    <errorConditionFormula>AND(
					ISCHANGED(Estado__c),
     ISPICKVAL(Estado__c,&apos;Liberado&apos;),
	    NOT(ISCHANGED(Fecha_Real_de_Liberacion__c))
				)</errorConditionFormula>
    <errorDisplayField>Fecha_Real_de_Liberacion__c</errorDisplayField>
    <errorMessage>El estado ha cambiado a Liberado, actualiza la Fecha Real de Liberación</errorMessage>
</ValidationRule>