force-app/main/default/objects/Subentregable__c/validationRules/Responsable_Cliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsable_Cliente</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Username &lt;&gt; &quot;javier.ponce@gestion.ayesa.com&quot;,AND( NOT(ISBLANK(Responsable_Cliente__c)),Grupos_de_Entregables__r.Proyecto__r.Cuenta__c &lt;&gt;  Responsable_Cliente__r.AccountId))</errorConditionFormula>
    <errorDisplayField>Responsable_Cliente__c</errorDisplayField>
    <errorMessage>El Resposable Cliente que ha seleccionado no pertenece a los Contactos de la Cuenta relacionada con el Entregable</errorMessage>
</ValidationRule>