force-app/main/default/objects/Subentregable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>