force-app/main/default/objects/Subentregable__c/listViews/Ciudad_de_la_Justicia_de_Alicante.listView-meta.xml
<ListView>
    <fullName>Ciudad_de_la_Justicia_de_Alicante</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <label>Ciudad de la Justicia de Alicante</label>
    <sharedTo>
        <group>Ciudad_Justicia_Alicante</group>
    </sharedTo>
</ListView>