force-app/main/default/objects/Subentregable__c/listViews/Copia_de_Gesti_n_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Copia_de_Gesti_n_de_la_Calidad_TIC</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>Mt Quadre Com. Municipal Ay. Barcelona</value>
    </filters>
    <label>Mt Quadre Com. Municipal Ay. Barcelona</label>
    <sharedTo>
        <group>CM_Ayto_Barcelona_Consultores</group>
    </sharedTo>
</ListView>