force-app/main/default/objects/Subentregable__c/listViews/Gestion_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Gestion_de_la_Calidad_TIC</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <label>Gestión de la Calidad TIC</label>
    <sharedTo>
        <group>Gestion_de_la_Calidad_TIC_Consultores</group>
    </sharedTo>
</ListView>