force-app/main/default/objects/Subentregable__c/listViews/Gestion_educativa_CCAA_Madrid_RAICES.listView-meta.xml
<ListView>
    <fullName>Gestion_educativa_CCAA_Madrid_RAICES</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>Gestión educativa CCAA Madrid. RAICES</value>
    </filters>
    <label>Gestión educativa CCAA Madrid. RAICES</label>
    <sharedTo></sharedTo>
</ListView>