force-app/main/default/objects/Subentregable__c/listViews/ISU_Agua_de_Quito.listView-meta.xml
<ListView>
    <fullName>ISU_Agua_de_Quito</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>ISU Agua de Quito</value>
    </filters>
    <label>ISU Agua de Quito</label>
    <sharedTo></sharedTo>
</ListView>