force-app/main/default/objects/Subentregable__c/listViews/Mantenimiento_ERP_EPMAPS2.listView-meta.xml
<ListView>
    <fullName>Mantenimiento_ERP_EPMAPS2</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>Mantenimiento ERP EPMAPS</value>
    </filters>
    <label>Mantenimiento ERP EPMAPS</label>
    <sharedTo></sharedTo>
</ListView>