force-app/main/default/objects/Subentregable__c/listViews/MINFIN_Ecuador.listView-meta.xml
<ListView>
    <fullName>MINFIN_Ecuador</fullName>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Avance__c</columns>
    <columns>Peso__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_Entregable__c</field>
        <operation>equals</operation>
        <value>MINFIN Ecuador</value>
    </filters>
    <label>MINFIN Ecuador</label>
    <sharedTo>
        <group>MINFIN_Ecuador</group>
    </sharedTo>
</ListView>