force-app/main/default/objects/Subentregable__c/listViews/Mis_Entregables_Pendientes.listView-meta.xml
<ListView>
    <fullName>Mis_Entregables_Pendientes</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CodigoSubentregable__c</columns>
    <columns>NAME</columns>
    <columns>Avance__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo__c</columns>
    <columns>DiasRestantesFirma__c</columns>
    <columns>DiasRestantesLiberacion__c</columns>
    <columns>ResponsableN1__c</columns>
    <columns>Soy_ResponsableN1__c</columns>
    <columns>ResponsableN2__c</columns>
    <columns>Soy_ResponsableN2__c</columns>
    <columns>FechaLimiteFirma__c</columns>
    <columns>FechaLimiteLiberacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Soy_ResponsableN1__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Soy_ResponsableN2__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mis Entregables Pendientes (N1 o N2)</label>
</ListView>